Kubernetes/Grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: grafana-datasource-volume
          mountPath: /etc/grafana/provisioning/datasources
          readOnly: true
        - name: grafana-dashboard-provider
          mountPath: /etc/grafana/provisioning/dashboards/
        - name: grafana-click-count-dashboard
          mountPath: /var/lib/grafana/dashboards/click-count/
        - name: grafana-jenkins-dashboard
          mountPath: /var/lib/grafana/dashboards/jenkins/
        - name: grafana-kube-metrics-dashboard
          mountPath: /var/lib/grafana/dashboards/kube/
      volumes:
      - name: grafana-datasource-volume
        configMap:
          name: grafana-datasource-config
      - name: grafana-dashboard-provider
        configMap:
          name: grafana-dashboard-provider
      - name: grafana-click-count-dashboard
        configMap:
          name: grafana-click-count-dashboard
      - name: grafana-jenkins-dashboard
        configMap:
          name: grafana-jenkins-dashboard
      - name: grafana-kube-metrics-dashboard
        configMap:
          name: grafana-kube-metrics-dashboard
      restartPolicy: Always
